[gd_scene load_steps=3 format=3 uid="uid://f1mt5p6n7o8q9"]

[ext_resource type="Script" path="res://scripts/map_mods/health_station_mod.gd" id="1_health_station"]

[sub_resource type="CircleShape2D" id="CircleShape2D_health"]
radius = 100.0

[node name="HealthStation" type="StaticBody2D"]
collision_layer = 64
collision_mask = 0
script = ExtResource("1_health_station")

[node name="Visual" type="Node2D" parent="."]

[node name="Base" type="ColorRect" parent="Visual"]
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
color = Color(0, 0.8, 0.2, 0.8)

[node name="Cross1" type="ColorRect" parent="Visual"]
offset_left = -16.0
offset_top = -4.0
offset_right = 16.0
offset_bottom = 4.0
color = Color(1, 1, 1, 1)

[node name="Cross2" type="ColorRect" parent="Visual"]
offset_left = -4.0
offset_top = -16.0
offset_right = 4.0
offset_bottom = 16.0
color = Color(1, 1, 1, 1)

[node name="HealArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealArea"]
shape = SubResource("CircleShape2D_health")

[node name="HealTimer" type="Timer" parent="."]
wait_time = 1.0
autostart = true

[connection signal="timeout" from="HealTimer" to="." method="_on_heal_timer_timeout"]
